objects/OpportunityEcoStruxureRule__mdt.object
<CustomObject>
    <fields>
        <fullName>ADO_Consideration_PL_1__c</fullName>
        <label>ADO Consideration PL-1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADO_Consideration_PL_2__c</fullName>
        <label>ADO Consideration PL-2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADO_Consideration__c</fullName>
        <label>ADO Consideration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountClassificationLevel__c</fullName>
        <label>Account Classification Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppsAnalytics__c</fullName>
        <label>Analytics Apps  Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_references__c</fullName>
        <label>Commercial references</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ComplexRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConnectedProduct__c</fullName>
        <label>Connected Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EcoDigitalOffer__c</fullName>
        <description>For check of ADVISOR DIGITAL OFFER  Products</description>
        <label>ECO Digital Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EcoVCPAccount__c</fullName>
        <label>Eco VCP Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EdgeControl__c</fullName>
        <label>Edge Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraDomainProduct__c</fullName>
        <label>Extra Domain Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineStatus__c</fullName>
        <label>Line Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityScopeAttribute__c</fullName>
        <label>Opportunity  Scope Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity EcoStruxure Rule</label>
    <pluralLabel>Opportunity Eco Struxure Rules</pluralLabel>
</CustomObject>